# moebius-gimp

./: .gitignore  README.md  install_backend.sh  install_plugin.sh  pyproject.toml
plug-in/moebius_inpaint/: moebius_inpaint.py
scripts/: moebius_api_probe.sh  moebius_api_probe2.sh  remote_probe.sh
server/: moebius_backend.py  requirements.txt  run_server.sh  server.py
